# cookiecutter-cmake

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  code.hpp  common_setup.cmake  commons.cmake.in
{{cookiecutter.project_name}}/benchmark/: CMakeLists.txt  benchmark.cpp
{{cookiecutter.project_name}}/example/: CMakeLists.txt  example.cpp
{{cookiecutter.project_name}}/test/: CMakeLists.txt  test.cpp
